# ROS_uts_cas_wheelchair

./: README.md
goto_box_project/RViz_odroid/: amcl_measurement.rviz  (+4 more)
goto_box_project/goto_box/: CMakeLists.txt  CMakeLists.txt~  UserManual goto_box_project.odt  package.xml  package.xml~
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/: .gitignore  readme.md  work_log.txt
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/documentation/: coordinate_frame_info.tex
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/laser_conversions/: CMakeLists.txt  package.xml  readme.md
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/laser_conversions/launch/: laser_conversions.launch
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/laser_conversions/src/: call_laser_assembler_srv.cpp  concatenate_pcls.cpp  conv_cloud_to_cloud2.cpp  conv_laser_to_cloud.cpp
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/master_laser_scanner/: CMakeLists.txt  package.xml  readme.md
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/master_laser_scanner/launch/: master_laser_scanner.launch
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/master_laser_scanner/rviz/: slam.rviz  slam_gmapping.rviz
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/slam_2d/: CMakeLists.txt  package.xml  readme.md
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/slam_2d/launch/: slam_2d.launch
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/slam_3d/: CMakeLists.txt  package.xml  readme.md
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/slam_3d/launch/: octomap.launch
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/uts_sensor_box/: sb_run.sh  startup_doc.txt
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/uts_sensor_box/config/: useful_info.txt
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/uts_sensor_box/config/udevrules/: lidar.rules  myahrs-imu.rules  pgr.rules  serial-arduino.rules
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/uts_sensor_box/config/upstart/: README  find_old.sh  install.bash  sb_cleandisk.sh  sb_kill.sh  sb_reboot.sh  sb_root_shutdown.sh  sb_service.conf  sb_shutdown.sh  sb_start.sh  sb_stop.sh
goto_box_project/goto_box/bemery94-laser_scanner-b304e29b5a08/uts_sensor_box/data_recorder/: CMakeLists.txt  ReadMe.txt  package.xml  sb_run.sh
goto_box_project/goto_box/config/RViz/: hec.rviz  hec_wheelchair.rviz  stage_nav_goto_box.rviz  stage_nav_goto_box_mapping.rviz  stage_nav_goto_box_wheelchair.rviz  stage_nav_instr.rviz
goto_box_project/goto_box/config/map/: UTS_map.yaml  UTS_map4.yaml  cave.pgm  goto_box_chair.world  goto_box_chair.world~  goto_box_instr.world  goto_box_instr.world~  goto_box_sim.world  goto_box_sim.world~  map_c_1.yaml  map_c_1.yaml~  map_i_1.yaml  map_i_1.yaml~  map_s_1.yaml
goto_box_project/goto_box/config/navigation/goto_box_mapping/: base_local_planner_params_mapping.yaml  costmap_common_params_mapping.yaml  global_costmap_params_mapping.yaml
goto_box_project/goto_box/config/navigation/goto_box_nav/: base_local_planner_params_nav.yaml  base_local_planner_params_nav.yaml~  costmap_common_params_nav.yaml  costmap_common_params_nav.yaml~  costmap_common_params_nav_wc.yaml~  global_costmap_params_nav.yaml
goto_box_project/goto_box/config/navigation/instr_nav/: base_local_planner_params.yaml  global_costmap_params2.yaml
goto_box_project/goto_box/data/: wc_jt.csv
goto_box_project/goto_box/firmware_extensional_module/: CMakeLists.txt
goto_box_project/goto_box/firmware_wheelchair/: CMakeLists.txt
goto_box_project/goto_box/include/goto_box/: defs.h
goto_box_project/goto_box/launch/: amcl.launch  amcl_sm.launch  amcl_sm.launch~  goto_box_chair.launch  goto_box_chair.launch~  goto_box_chair_incl_upload.launch  goto_box_sim.launch  goto_box_sim.launch~  goto_box_sim_incl_upload.launch  joy_mapping_chair.launch  joy_mapping_chair.launch~  joy_mapping_chair_incl_upload.launch  joy_mapping_sim.launch  joy_mapping_sim.launch~  ros_slam_intro.launch  ros_slam_intro.launch~  scan_matcher.launch~  stageros2.launch  stageros2.launch~  stageros_intro.launch  stageros_intro.launch~  wheelchair_slam.launch  wheelchair_slam.launch~
goto_box_project/goto_box/scripts/: uploadingcodeMega.sh  uploadingcodeUno.sh
goto_box_project/goto_box/src/: SerialCom.cpp  WheelEncoder.cpp  amcl_pose_to_odom.cpp  joy_to_joy.cpp  nav_talker_rviz.cpp  odom_to_tf.cpp  pos_pros_node.cpp  reset.py  reset_wheelchair.py  reset_wheelchair.py~  tf_to_odom.cpp  wc_encoders_node.cpp
goto_box_project/goto_box/srv/: Hash.srv
goto_box_project/goto_box/udev_rules/: 43-gotobox.rules  55-wc_enc.rules
goto_box_project/goto_odroid/: CMakeLists.txt  CMakeLists.txt~  package.xml
goto_box_project/goto_odroid/config/map/: GDS_map2.yaml  GDS_map2.yaml~  UTS_map2.yaml  UTS_map2.yaml~  UTS_map3.yaml  UTS_map3.yaml~
goto_box_project/goto_odroid/config/planner/: base_local_planner.yaml  base_local_planner.yaml~  costmap_common.yaml  local_costmap.yaml
goto_box_project/goto_odroid/data/: wc_jt_args.csv
goto_box_project/goto_odroid/firmware_extensional_module/: boxinfo.cpp
goto_box_project/goto_odroid/firmware_wheelchair/: mega_wheelchair.cpp
goto_box_project/goto_odroid/include/goto_odroid/: WheelEncoder_.h
goto_box_project/goto_odroid/launch/: wc_amcl_measurement.launch  wc_amcl_measurement.launch~  wc_incl_upload.launch  wc_measurement.launch  wc_odroid.launch  wc_odroid_enc.launch  wc_slam.launch
goto_box_project/goto_odroid/scripts/: timed_roslaunch.sh  uploadingcodeMega.sh  uploadingcodeUno.sh
goto_box_project/goto_odroid/src/: SerialCom_.cpp  WheelEncoder_.cpp  basic_hash_node_.py  build_joy_twist_profile_.cpp  convert_scan.cpp  hector_odom_.cpp  jt_inverse_node_.py  jt_inverse_node_.py~  loc_.cpp  pos_pros_node_.cpp  reset_wheelchair_.py  tf_to_odom_.cpp  wc_encoders_node_.cpp
goto_box_project/goto_odroid/udev_rules/: 41-wheelchair_mega.rules  42-hokuyo.rules
(+55 files in other folders)
