<?xml version="1.0"?>
<package>
  <name>laser_condition</name>
  <version>0.0.0</version>
  <description>The laser_scanner_conditioning package</description>

  <maintainer email="odroid@todo.todo">odroid</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
